# gtk

./: .gitignore  Readme.md
01-window/glade/: window.glade
01-window/src/: main.c
02-button/glade/: window.glade
02-button/src/: main.c
03-dialog/glade/: window.glade
03-dialog/src/: main.c
04-entry/glade/: window.glade
04-entry/src/: main.c
05-checkbox/glade/: window.glade
05-checkbox/src/: main.c
06-radio_button/glade/: window.glade
06-radio_button/src/: main.c
06-radio_button_gslist/src/: main.c
07-counter/: CMakeLists.txt
07-counter/glade/: window.glade
07-counter/src/: main.c
08-counter_mvc/: CMakeLists.txt
08-counter_mvc/src/: controller.c  controller.h  controller_base.h  main.c  model.c  model.h  view.c  view.h  view_base.h
09-dto_triangle/: CMakeLists.txt
09-dto_triangle/glade/: window.glade
09-dto_triangle/include/: business.h  controller.h  controller_base.h  model.h  model_dto.h  view.h  view_base.h
09-dto_triangle/src/: business.c  controller.c  main.c  model.c  view.c
